<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/solar_data_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/padding_8">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pressure_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@string/alpha_60"
            android:text="@string/pressure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pressure_val_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/pressure_unit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_60"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidity_val_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressure_val_text_view"
            tools:text="@string/humidity_unit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uvi_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_60"
            android:text="@string/uvi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uvi_val_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity_val_text_view"
            tools:text="@string/uvi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cloudiness_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_60"
            android:text="@string/cloudiness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uvi_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cloudiness_val_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uvi_val_text_view"
            tools:text="@string/percent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/visibility_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:alpha="@string/alpha_60"
            android:text="@string/visibility"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloudiness_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/visibility_val_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloudiness_val_text_view"
            tools:text="@string/visibility_unit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>