<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/corner_8"
    android:layout_margin="@dimen/margin_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_4">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_week_day_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/week_day" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:alpha="@string/alpha_50"
            app:layout_constraintStart_toEndOf="@id/item_week_day_text_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/daytime_guide_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <include
            android:id="@+id/morning_item"
            layout="@layout/fragment_daily_temp_item"
            android:layout_width="@dimen/width_65"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/day_item"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daytime_guide_line" />

        <include
            android:id="@+id/day_item"
            layout="@layout/fragment_daily_temp_item"
            android:layout_width="@dimen/width_65"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/evening_item"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/morning_item"
            app:layout_constraintTop_toBottomOf="@id/daytime_guide_line" />

        <include
            android:id="@+id/evening_item"
            layout="@layout/fragment_daily_temp_item"
            android:layout_width="@dimen/width_65"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/night_item"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_item"
            app:layout_constraintTop_toBottomOf="@id/daytime_guide_line" />

        <include
            android:id="@+id/night_item"
            layout="@layout/fragment_daily_temp_item"
            android:layout_width="@dimen/width_65"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/item_guide_line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/evening_item"
            app:layout_constraintTop_toBottomOf="@id/daytime_guide_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/item_guide_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_condition_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_guide_line"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_wb_cloudy_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="@string/alpha_50"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_guide_line"
            app:layout_constraintTop_toBottomOf="@+id/item_condition_image_view"
            tools:text="@string/condition" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/details_guide_line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <include
            android:id="@+id/details_item"
            layout="@layout/fragment_daily_details_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_guide_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_guide_line" />

        <include
            android:id="@+id/wind_item"
            layout="@layout/fragment_daily_wind_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_guide_line"
            app:layout_constraintTop_toBottomOf="@id/details_guide_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>